# google-trends

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/google-trends-website-builder/: design.md  requirements.md  tasks.md
examples/: trends_collector_demo.py
scripts/: setup_database.py
src/: __init__.py  config.py  main.py
src/api/: main.py
src/database/: README.md  __init__.py  connection.py  init_db.py  migrations.py  models.py
src/models/: core.py
src/services/: __init__.py  interfaces.py  trends_collector.py
src/web/: __init__.py  dashboard.py
tests/: test_database.py  test_models.py  test_trends_collector.py  test_trends_collector_integration.py
